<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UploadActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_upload"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_kode"
                android:visibility="invisible"/>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_keterangan"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_kategori"
                style="@style/InputLabel"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_choose_photo"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"/>

            <ImageView
                android:id="@+id/img_thumb"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                style="@style/AppTheme.Button"
                android:text="@string/txt_upload" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>